Feat: Separate profile page into account details and password change sections for role pengelola surat
- Split profile page into two sections: account details and password change
- Added functionality to upload new profile pictures in uploads/foto_profil
- Updated MY_style.css to style .img-account-profile for the new profile picture changes
- Adjusted navigation and UI elements to reflect the new structure

--- a/assets/css/MY_styles.css
+++ b/assets/css/MY_styles.css
@@ -22,3 +22,8 @@ button.btn:active span.btn
 table.table.dataTable.table-hover>tbody>tr:hover>* {
     box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg);
 }
+
+.img-account-profile {
+    height: 10rem;
+    width: 10rem;
+}
